; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/fatfs/extr_myfatfs.c_myfatfs_opendir.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/fatfs/extr_myfatfs.c_myfatfs_opendir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.myvfs_dir = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32*, i32 }

@FR_OK = common dso_local global i32 0, align 4
@last_result = common dso_local global i32 0, align 4
@VFS_FS_FATFS = common dso_local global i32 0, align 4
@myfatfs_dir_fns = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @myfatfs_opendir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @myfatfs_opendir(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.myvfs_dir*, align 8
  store i8* %0, i8** %3, align 8
  %5 = call %struct.myvfs_dir* @malloc(i32 24)
  store %struct.myvfs_dir* %5, %struct.myvfs_dir** %4, align 8
  %6 = icmp ne %struct.myvfs_dir* %5, null
  br i1 %6, label %7, label %28

7:                                                ; preds = %1
  %8 = load i32, i32* @FR_OK, align 4
  %9 = load %struct.myvfs_dir*, %struct.myvfs_dir** %4, align 8
  %10 = getelementptr inbounds %struct.myvfs_dir, %struct.myvfs_dir* %9, i32 0, i32 1
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @f_opendir(i32* %10, i8* %11)
  store i32 %12, i32* @last_result, align 4
  %13 = icmp eq i32 %8, %12
  br i1 %13, label %14, label %24

14:                                               ; preds = %7
  %15 = load i32, i32* @VFS_FS_FATFS, align 4
  %16 = load %struct.myvfs_dir*, %struct.myvfs_dir** %4, align 8
  %17 = getelementptr inbounds %struct.myvfs_dir, %struct.myvfs_dir* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  store i32 %15, i32* %18, align 8
  %19 = load %struct.myvfs_dir*, %struct.myvfs_dir** %4, align 8
  %20 = getelementptr inbounds %struct.myvfs_dir, %struct.myvfs_dir* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  store i32* @myfatfs_dir_fns, i32** %21, align 8
  %22 = load %struct.myvfs_dir*, %struct.myvfs_dir** %4, align 8
  %23 = bitcast %struct.myvfs_dir* %22 to i32*
  store i32* %23, i32** %2, align 8
  br label %29

24:                                               ; preds = %7
  %25 = load %struct.myvfs_dir*, %struct.myvfs_dir** %4, align 8
  %26 = call i32 @free(%struct.myvfs_dir* %25)
  br label %27

27:                                               ; preds = %24
  br label %28

28:                                               ; preds = %27, %1
  store i32* null, i32** %2, align 8
  br label %29

29:                                               ; preds = %28, %14
  %30 = load i32*, i32** %2, align 8
  ret i32* %30
}

declare dso_local %struct.myvfs_dir* @malloc(i32) #1

declare dso_local i32 @f_opendir(i32*, i8*) #1

declare dso_local i32 @free(%struct.myvfs_dir*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
